--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "dependencies": {
     "babelify": "^6.3.0",
     "browserify": "^11.0.1",
+    "express": "^4.13.3",
     "react": "^0.13.3"
   },
   "scripts": {
-    "build": "browserify public/javascripts/app.js > public/javascripts/build.js -t babelify"
+    "build": "browserify public/javascripts/app.js > public/javascripts/build.js -t babelify",
+    "start": "node app.js"
   }
 }
