--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "dependencies": {
     "babelify": "^6.3.0",
     "browserify": "^11.0.1",
+    "ejs": "^2.3.4",
     "express": "^4.13.3",
+    "node-jsx": "^0.13.3",
     "react": "^0.13.3"
   },
   "scripts": {
