--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "Horus",
   "dependencies": {
     "babelify": "^6.3.0",
+    "body-parser": "^1.14.1",
     "browserify": "^11.0.1",
     "ejs": "^2.3.4",
     "express": "^4.13.3",
+    "jquery": "^2.1.4",
     "node-jsx": "^0.13.3",
     "react": "^0.13.3"
   },
