--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
     "body-parser": "^1.14.1",
     "browserify": "^11.0.1",
     "ejs": "^2.3.4",
+    "exenv": "^1.2.0",
     "express": "^4.13.3",
     "jquery": "^2.1.4",
     "node-jsx": "^0.13.3",
-    "react": "^0.13.3"
+    "react": "^0.14.0",
+    "react-dom": "^0.14.0"
   },
   "scripts": {
     "start": "node app.js"
