--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "jquery": "^2.1.4",
     "node-jsx": "^0.13.3",
     "react": "^0.14.0",
-    "react-dom": "^0.14.0"
+    "react-dom": "^0.14.0",
+    "socket.io": "^1.3.7"
   },
   "scripts": {
     "start": "node app.js"
