--- a/package.json
+++ b/package.json
@@ -1,23 +1,10 @@
 {
   "name": "Horus",
-  "dependencies": {
-    "babelify": "^6.3.0",
-    "body-parser": "^1.14.1",
-    "browserify": "^11.0.1",
-    "ejs": "^2.3.4",
-    "exenv": "^1.2.0",
-    "express": "^4.13.3",
-    "jquery": "^2.1.4",
-    "node-jsx": "^0.13.3",
-    "react": "^0.14.0",
-    "react-dom": "^0.14.0",
-    "socket.io": "^1.3.7"
-  },
+  "author": "David Castelblanco Benavides",
   "scripts": {
     "start": "node app.js"
   },
-  "devDependencies": {
-    "grunt": "^0.4.5",
-    "grunt-browserify": "^4.0.1"
+  "dependencies": {
+    "express": "^4.13.4"
   }
 }
