--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   },
   "dependencies": {
     "body-parser": "^1.15.1",
+    "ejs": "^2.4.2",
     "express": "^4.13.4",
     "mongodb": "^2.1.19"
   }
