--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "start": "node app.js"
   },
   "dependencies": {
+    "bcrypt": "^0.8.6",
     "body-parser": "^1.15.1",
     "ejs": "^2.4.2",
     "express": "^4.13.4",
